# rustcam

./: Cargo.toml  README.md
script/: contour_plot  spotify_codes
src/contour_plots/: file_parser.rs  gcode_generator.rs  main.rs  marching_squares.rs  path_generator.rs  types.rs
src/lib/: file_writer.rs  rustcam.rs  types.rs
src/spotify_codes/: gcode_generator.rs  main.rs  svg_parser.rs
