[package]
name = "rustcam"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

[lib]
name = "rustcam"
path = "src/lib/rustcam.rs"

[[bin]]
name = "contour_plot"
path = "src/contour_plots/main.rs"

[[bin]]
name = "spotify_codes"
path = "src/spotify_codes/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.0"
log = "0.4.20"
rand = "0.8.5"
